--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,18 @@
-.App-logo {
-  height: 6vmin;
-  pointer-events: none;
-  padding: 0.2%;
-}
-
-.App-logo-text {
-  /* height: 15vmin; */
-  width: 200px; /* width of container */
-  height: 90px; /* height of container */
-  object-fit: cover;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background: #1d2025;
-  color: white;
-}
-
 .App-body{
-  background-color: #14534e;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(2px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  color: rgb(54, 54, 54);
 }
 
 table {
-  width:70%;
+  width:100%;
 }
 
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid rgb(156, 155, 155);
   border-collapse: collapse;
 }
 
@@ -51,24 +21,23 @@ th, td {
   text-align: left;
 }
 
-tr:nth-child(even) {
-  background-color: rgb(17, 17, 17);
+/* tr:nth-child(even) {
+  background: #eee;
+  background: linear-gradient(0deg, rgba(0, 0, 200, 0.2), rgba(0, 0, 200, 0));
 }
 
 tr:nth-child(odd) {
- background-color: rgb(22, 22, 22);
+ background-color: rgb(49, 49, 49);
+} */
+
+tr {
+  /* background: linear-gradient(90deg, rgba(53, 21, 21, 0.3), rgba(0, 0, 200, 0)); */
+  background-color:rgba(24, 21, 53, 0.25);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 200;
 }
 
 th {
-  background-color: rgb(20, 17, 17);
-  color: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgba(21, 53, 21, 0.3);
+  color: rgb(51, 50, 50);
 }
