--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ table, th, td {
 }
 
 th, td {
-  padding: 15px;
+  padding: 14px;
   text-align: left;
 }
 
@@ -40,4 +40,56 @@ tr {
 th {
   background-color: rgba(21, 53, 21, 0.3);
   color: rgb(51, 50, 50);
+}
+
+.dashboard {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+}
+
+iframe {
+  display: block;
+  margin: auto;
+  top: 50px;
+}
+
+.navigation {
+  float: right;
+  position: absolute;
+  top: 18px;
+  right: 20px;
+  z-index: 1;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+
+li a {
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color:rgba(255,255,255,0.5);
+}
+
+form {
+  margin: 0 auto;
+  text-align: center;
+  color: black;
+  box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+  border-radius: 10px;
 }
