--- a/src/App.css
+++ b/src/App.css
@@ -86,10 +86,19 @@ li a:hover {
   background-color:rgba(255,255,255,0.5);
 }
 
-form {
+form, label {
   margin: 0 auto;
   text-align: center;
   color: black;
   box-shadow:4px 4px 10px rgba(0,0,0,0.06);
   border-radius: 10px;
+}
+
+label {
+  line-height: 50px;
+}
+
+button {
+  margin: auto;
+  display: block;
 }
