--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,32 @@ th {
   margin: 0;
   padding: 0;
   font-family: "Lato", sans-serif;
+  font-size: large;
+}
+
+.download {
+  margin-top: 80px;
+  text-align: center;
+  box-shadow:4px 4px 10px rgba(0,0,0,0.30);
+  border-radius: 5px;
+  background-color: rgba(228, 240, 247, 0.7);
+  font-size: large;
+  padding: 10px;
+}
+
+.dashboardDropdown {
+  margin-top: 50px;
+  text-align: center;
+  box-shadow:4px 4px 10px rgba(0,0,0,0.30);
+  border-radius: 5px;
+  background-color: rgba(235, 241, 245, 0.8);
+  font-size: large;
+  padding: 10px;
+}
+
+#location {
+  width: 180px;
+  font-size: medium;
 }
 
 iframe {
@@ -90,8 +116,8 @@ form, label {
   margin: 0 auto;
   text-align: center;
   color: black;
-  box-shadow:4px 4px 10px rgba(0,0,0,0.06);
-  border-radius: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 label {
@@ -101,4 +127,10 @@ label {
 button {
   margin: auto;
   display: block;
+}
+
+p {
+  color: black;
+  margin: 0 auto;
+  text-align: center;
 }
