--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App-body{
+  padding-top: 90px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,22 +44,22 @@ th {
 }
 
 .dashboard {
+  padding-top: 30px;
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0;
   font-family: "Lato", sans-serif;
   font-size: large;
 }
 
 .download {
-  margin-top: 80px;
+  margin-top: 120px;
   text-align: center;
   box-shadow:4px 4px 10px rgba(0,0,0,0.30);
   border-radius: 5px;
   background-color: rgba(228, 240, 247, 0.7);
   font-size: large;
-  padding: 10px;
+  padding: 20px;
 }
 
 .dashboardDropdown {
@@ -133,4 +134,76 @@ p {
   color: black;
   margin: 0 auto;
   text-align: center;
+}
+
+.about {
+  margin: 0;
+  padding: 0;
+}
+
+.aboutContainer {
+  width: 191.9vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 75vh;
+  margin: 0 auto;
+  background: #3A1C71;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.aboutHeader {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 80px;
+}
+
+.aboutHeader h1 {
+  font-size: 80px;
+  font-weight: 900;
+}
+
+.aboutHeader h3 {
+  font-size: 24px;
+  font-weight: 300;
+  letter-spacing: 2.75px;
+}
+
+.bottomContainer {
+  background-color: beige;
+  padding-top: 25px;
+  color: black;
+  text-align: center;
+}
+
+.bottomContainer p {
+  padding-top: 15px;
+  font-size: large;
+  font-weight: 600;
+  text-align: left;
+  letter-spacing: 2px;
+  line-height: 200%;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+
+.arrow {
+  box-sizing: border-box;
+  height: 5vw;
+  width: 5vw;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 2px 2px 0px;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
+}
+
+.arrow:hover {
+  border-bottom-width: 4px;
+  border-right-width: 4px;
 }
