--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,12 @@ th {
   color: rgb(51, 50, 50);
 }
 
+@media (max-width: 648px) {
+  tr {
+    color: rgb(5, 5, 5);
+  }
+}
+
 .dashboard {
   padding-top: 30px;
   width: 100%;
@@ -72,16 +78,17 @@ th {
   padding: 10px;
 }
 
-@media (max-width: 648px) {
-  iframe {
-    width: 500px;
-    height: 800px;
-  }
+iframe {
+  display: block;
+  margin: auto;
+  top: 50px;
+  width: 840px;
+  height: 900px;
 }
 
-@media (max-width: 870px) {
+@media (max-width: 648px) {
   iframe {
-    width: 650px;
+    width: 400px;
     height: 800px;
   }
 }
@@ -101,11 +108,6 @@ th {
   font-size: medium;
 }
 
-iframe {
-  display: block;
-  margin: auto;
-  top: 50px;
-}
 
 .logo-nav {
   display: flex;
@@ -208,7 +210,11 @@ form, label {
   padding-left: 30px;
   padding-right: 30px;
 }
-
+@media (max-width: 648px) {
+  label {
+    display: block;
+  }
+}
 label {
   line-height: 50px;
 }
@@ -263,6 +269,8 @@ p {
 }
 
 .bottomContainer {
+  width: 100%;
+  height: 100%;
   background-color: beige;
   padding-top: 25px;
   color: black;
